--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build:web": "expo export -p web",
+    "build:web": "expo export -p web && touch dist/.nojekyll",
     "predeploy": "npm run build:web",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist --dotfiles"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -26,6 +26,6 @@
   "devDependencies": {
     "gh-pages": "^6.3.0"
   },
-  "homepage": "https://ayushshrestha.github.io/portfolio",
+  "homepage": "https://aaushsth.github.io/portfolio",
   "private": true
 }
