--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build:web": "expo export -p web && touch dist/.nojekyll",
-    "predeploy": "npm run build:web",
-    "deploy": "gh-pages -d dist --dotfiles"
+    "build:web": "expo export -p web",
+    "deploy": "npm run build:web && npx wrangler pages deploy dist --project-name=portfolio"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -23,9 +22,5 @@
     "react-native-reanimated": "^4.2.1",
     "react-native-web": "^0.21.0"
   },
-  "devDependencies": {
-    "gh-pages": "^6.3.0"
-  },
-  "homepage": "https://aaushsth.github.io/portfolio",
   "private": true
 }
